Fix category selector's link highlighting and horizontal scrolling.

--- a/app/assets/stylesheets/_category_selector.scss
+++ b/app/assets/stylesheets/_category_selector.scss
@@ -8,10 +8,10 @@
   float: left;
   height: 300px;
   list-style: none;
-  overflow-y: auto;
+  overflow-y: scroll;
   margin: 0;
   padding: 15px 15px 0;
-  width: 20%;
+  width: 325px;
   .selected {
     @extend %background-hover;
   }
